Thumbnails now appear after inputting a Google Drive folder ID and clicking the import button.

--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,15 @@
 <body>
     <h1>Google Drive Importer</h1>
 
-    <input id="url-input" class="input-field" type="text">
-    <button id="apply-button" class="apply-button">Apply</button>
 
-    <div class="grid-container">
-        <div class="grid-item"><img src="https://lh3.googleusercontent.com/jdNIlg2RQGV0zoaQ_AEgCyInz43IKrIFZECj3yqt1IVFQcTkHOdFVKFTv3X6kgSQi5CznW2hxyB7WKk=s220"></div>
-        <div class="grid-item"><img src="https://lh3.googleusercontent.com/jdNIlg2RQGV0zoaQ_AEgCyInz43IKrIFZECj3yqt1IVFQcTkHOdFVKFTv3X6kgSQi5CznW2hxyB7WKk=s220"></div>
-        <div class="grid-item"><img src="https://lh3.googleusercontent.com/jdNIlg2RQGV0zoaQ_AEgCyInz43IKrIFZECj3yqt1IVFQcTkHOdFVKFTv3X6kgSQi5CznW2hxyB7WKk=s220"></div>
-        <div class="grid-item"><img src="https://lh3.googleusercontent.com/jdNIlg2RQGV0zoaQ_AEgCyInz43IKrIFZECj3yqt1IVFQcTkHOdFVKFTv3X6kgSQi5CznW2hxyB7WKk=s220"></div>
+    <div id="url-input-container">
+        <input id="url-input" class="input-field" type="text" placeholder="Paste Google Drive link here..." value="1MuAMCgwtfi5m9MGXXsQDBEn3AR6R7uED">
+        <button id="import-button">Import</button>
+    </div>
+
+
+
+    <div id="grid-container">
 
 
     </div>
