Thumbnails now download the image to the Desktop.

--- a/client/index.html
+++ b/client/index.html
@@ -14,14 +14,10 @@
         <button id="import-button">Import</button>
     </div>
 
-
-
     <div id="grid-container">
-
+        <!-- File thumbnails are populated here. -->
 
     </div>
-
-
 
     <script type="text/javascript" src="CSInterface.js"></script>
     <script type="text/javascript" src="index.js"></script>
