Thumbnails dim and a download arrow appears on hover.

--- a/client/index.html
+++ b/client/index.html
@@ -8,15 +8,13 @@
 <body>
     <h1>Google Drive Importer</h1>
 
-
     <div id="url-input-container">
-        <input id="url-input" class="input-field" type="text" placeholder="Paste Google Drive link here..." value="1MuAMCgwtfi5m9MGXXsQDBEn3AR6R7uED">
+        <input id="url-input" class="input-field" type="text" placeholder="Paste Google Drive link here..." value="https://drive.google.com/drive/u/0/folders/1MuAMCgwtfi5m9MGXXsQDBEn3AR6R7uED">
         <button id="import-button">Import</button>
     </div>
 
     <div id="grid-container">
         <!-- File thumbnails are populated here. -->
-
     </div>
 
     <script type="text/javascript" src="CSInterface.js"></script>
