Added first time user browser authentication.

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Google Drive Importer</h1>
 
+    <div id="auth-container"></div>
+
     <div id="url-input-container">
         <input id="url-input" class="input-field" type="text" placeholder="Paste Google Drive link here..." value="https://drive.google.com/drive/u/0/folders/1MuAMCgwtfi5m9MGXXsQDBEn3AR6R7uED">
         <button id="import-button">Import</button>
