--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <div id="auth-container"></div>
 
     <div id="url-input-container">
-        <input id="url-input" class="input-field" type="text" placeholder="Paste Google Drive link here..." value="https://drive.google.com/drive/u/0/folders/1MuAMCgwtfi5m9MGXXsQDBEn3AR6R7uED">
+        <input id="url-input" class="input-field" type="text" placeholder="Paste Google Drive link here...">
         <button id="import-button" class="button">Import</button>
     </div>
 
